# pygalgee

./: .copier-answers.yml  .pre-commit-config.yaml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  README.md  README.rst  noxfile.py  pyproject.toml
.github/workflows/: pypackage_check.yaml  release.yaml  unit.yaml
docs/: conf.py  index.rst  usage.rst
docs/_template/: pypackage-credit.html
pygalgee/: __init__.py  chart.py  image.py  table.py
tests/: conftest.py  test_feature.py  test_image.py  test_pygalgee.py
